# PRS

./: README.md
PRS/: README.md  pyproject.toml
PRS/configs/: default.json
PRS/docs/: 代码讲解.md  使用教程.md
PRS/examples/: run_demo.py  run_real_training.py
PRS/prs/: __init__.py  plugin.py
PRS/prs/checkpoint/: __init__.py
PRS/prs/distributed/: __init__.py
PRS/prs/elastic/: __init__.py
PRS/prs/engine/: __init__.py
PRS/prs/experiments/: __init__.py  cli.py  metrics.py  report.py  supervisor.py  torch_runner.py
PRS/prs/launcher/: __init__.py
PRS/prs/moe/: __init__.py
PRS/prs/pipeline/: __init__.py
PRS/prs/planning/: __init__.py
PRS/prs/scheduler/: __init__.py
PRS/prs/web/: __init__.py  monitor.py
PRS/prs/web/templates/: index.html
PRS/scripts/: run_5min_fault_demo.sh
PRS/tests/: __init__.py  test_prs.py
